create_first.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: backend-deploy
  labels:
    app : backend-deployment
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      project: backend
  template:
    metadata:
      labels:
        project: backend   # Service will look for those PODS Labels!!!
    spec:
      containers:
        - name : backend-web
          image: undrey/backend:latest
          ports:
            - containerPort: 5000
      imagePullPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  labels:
     env  : prod
     owner: Rubtsov
spec:
  selector:
    project: backend      # Selecting PODs with those Labels
  ports:
    - name      : app-listener
      protocol  : TCP
      port      : 80  # Port on Load Balancer
      targetPort: 5000  # Port on Pod
  type: LoadBalancer
