create_second.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: frontend-deploy
  ##test
  annotations:
    app.gitlab.com/app: ${CI_PROJECT_PATH_SLUG}
    app.gitlab.com/env: ${CI_ENVIRONMENT_SLUG}
  ##test
  labels:
    app : frontend-deployment
spec:
  selector:
    matchLabels:
      project: frontend
  template:
    metadata:
      labels:
        project: frontend   # Service will look for those PODS Labels!!!
    spec:
      containers:
        - name : frontend-web
          image: undrey/frontend:latest
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  ##test
  annotations:
    app.gitlab.com/app: ${CI_PROJECT_PATH_SLUG}
    app.gitlab.com/env: ${CI_ENVIRONMENT_SLUG}
  ##test
  labels:
     env  : prod
     owner: Rubtsov
spec:
  selector:
    project: frontend      # Selecting PODs with those Labels
  ports:
    - name      : app-listener
      protocol  : TCP
      port      : 80  # Port on Load Balancer
      targetPort: 5000  # Port on Pod
  type: LoadBalancer
