ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-undrey
spec:
  rules:
  - host: "loki.k8s-test.link"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: loki-grafana
            port:
              number: 80
  - host: "sonarqube.k8s-test.link"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: sonarqube-sonarqube
            port:
              number: 9000
